Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-22235

drift thresholds don't update from set_param

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 4.6.2
    • 4.6.0
    • couchbase-bucket
    • None
    • Untriaged
    • No

    Description

      A missing call to register the change listener with the Configuration object means that set_param doesn't push changes to the the vbucket-map (and finally the vbuckets).

      The outcome is that the drift thresholds don't actually update from set_param requests.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              jwalker Jim Walker
              jwalker Jim Walker
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty